# CR5Robot-point

./: .gitignore  AGENTS.md  LICENSE  README.md  main.py  setup-docker.sh  setup_cr5_lightning.sh
cr5_docker_build/: Dockerfile
cr5_ws/src/CR5_ROS/cr5_moveit/: package.xml
cr5_ws/src/CR5_ROS/cr5_moveit/config/: cr5_robot.srdf  gazebo_controllers-old.yaml  gazebo_controllers.yaml  gazebo_moveit_controllers.yaml
cr5_ws/src/CR5_ROS/cr5_moveit/launch/: demo_gazebo.launch  gazebo.launch  gazebo_moveit_controller_manager.launch.xml  (+2 more)
cr5_ws/src/cr5_color_pointing/: CMakeLists.txt  README.md  package.xml  setup.py
cr5_ws/src/cr5_color_pointing/config/: color_thresholds.yaml  demo.yaml  demo.yaml.backup_before_scan_fix  demo.yaml.broken_backup_20260510_144732  hardware.yaml
cr5_ws/src/cr5_color_pointing/launch/: color_pointing.launch  cr5_hardware_bringup.launch  cr5_hardware_moveit.launch  hardware_color_pointing.launch  hardware_gazebo_shadow.launch  hardware_motion_only.launch  spawn_colored_boxes.launch
cr5_ws/src/cr5_color_pointing/models/colored_box_green/: model.config  model.sdf
cr5_ws/src/cr5_color_pointing/models/colored_box_red/: model.config  model.sdf
cr5_ws/src/cr5_color_pointing/models/colored_box_yellow/: model.config  model.sdf
cr5_ws/src/cr5_color_pointing/scripts/: auto_enable_cr5.py  color_pointing_node.py  color_pointing_node.py.backup_before_scan_fix  detect_color_once.py  execute_real_trajectory.py  gazebo_joint_state_mirror.py
cr5_ws/src/cr5_color_pointing/src/cr5_color_pointing/: __init__.py  perception.py
docs/: 00_PROJECT_OVERVIEW.md  01_LIGHTNING_DOCKER_ENVIRONMENT.md  02_ORIGINAL_CR5_REPO_ARCHITECTURE.md  03_SETUP_HISTORY_AND_TROUBLESHOOTING.md  04_GAZEBO_CONTROL_FIX.md  05_WRIST_CAMERA_AND_PERCEPTION.md  06_COLOR_POINTING_PACKAGE.md  07_OPERATION_GUIDE.md  08_SIM_TO_REAL_TRANSFER_PLAN.md  09_FUTURE_WORK_AND_ROADMAP.md  10_DECISIONS_LOG.md  11_CHANGELOG.md  12_CURRENT_STATUS.md  13_DOCUMENTATION_MAINTENANCE.md  14_NEXT_AGENT_TODO.md  15_REAL_ROBOT_BRINGUP.md  CR5_CAMERA.md  CR5_LIGHTNING_WORKFLOW.md  CR5_MAINTENANCE.md  CR5_TROUBLESHOOTING.md  CR5_VERIFICATION_CHECKLIST.md  README.md
(+15 files in other folders)
